Update to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ hs_err_pid*
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
-/build
+/app/build
 /captures
 .externalNativeBuild
+_DS_Store
